[package]
name = "xnb"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitflags = "1.2.1"
byteorder = "1.3.4"
indexmap = "1.6.1"
log = "0.4.11"
lzxd = "0.1.0"
nom = "6.0.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
pretty-hex = "0.2.1"
strum = { version = "0.26.2", features = ["derive"] }
